--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -95,6 +95,7 @@
         "apps": "Applications",
         "favorites": "Favorites",
         "home": "Yunity",
+        "image_editor": "Image Editor",
         "login": "Login",
         "profile": "Your Profile",
         "profile-visiting": "Visiting profile",
@@ -136,6 +137,7 @@
         "feeds": "Feeds",
         "gallery": "Gallery",
         "help": "Help",
+        "image_editor": "Image Editor",
         "login": "Login",
         "logout": "Logout",
         "polls": "Polls",
