--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -210,7 +210,9 @@
             "zoomIn": "Zoom in",
             "zoomOut": "Zoom out",
             "reset": "Reset",
-            "upload": "Upload"
+            "upload": "Upload",
+            "containWithinAspectRatio": "Contain within aspect ratio",
+            "fillAspectRatio": "Fill aspect ratio"
         },
         "back": "Go back",
         "browse": "Browse for an image...",
