--- a/src/assets/i18n/es-ES.json
+++ b/src/assets/i18n/es-ES.json
@@ -70,6 +70,9 @@
         },
         "cropper": {
             "failed": "Error al cargar la imagen"
+        },
+        "upload": {
+            "camera_access_denied": "Acceso a la cámara denegado"
         }
     },
     "dialog": {
